--- a/style.css
+++ b/style.css
@@ -2,4 +2,57 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
+
+.app-container {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+video {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: fill;
+     object-fit: fill;
+}
+
+.ops {
+  width: 80%;
+  height: auto;
+  position: absolute;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.timer-container {
+  height: 32rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.timer-container button {
+  padding: 1rem 2rem;
+  background: tran;
+}
+
+.player-container .player {
+  height: 32rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.mood-container .moods {
+  height: 32rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
 }/*# sourceMappingURL=style.css.map */
