--- a/style.sass
+++ b/style.sass
@@ -2,3 +2,48 @@
     padding: 0
     margin: 0
     box-sizing: border-box
+
+.app-container
+    width: 100%
+    height: 100vh
+    display: flex
+    justify-content: center
+    align-items: center
+
+video
+    width: 100%
+    height: 100%
+    object-fit: fill
+
+.ops
+    width: 80%
+    height: auto
+    position: absolute
+    display: flex
+    justify-content: space-between
+    align-items: center
+    
+.timer-container
+    height: 32rem
+    display: flex
+    flex-direction: column
+    justify-content: space-evenly
+    align-items: center
+
+.timer-container button
+    padding: 1rem 2rem
+    background: transparentize(0, 1)
+
+.player-container .player
+    height: 32rem
+    display: flex
+    flex-direction: column
+    justify-content: space-around
+    align-items: center
+
+.mood-container .moods
+    height: 32rem
+    display: flex
+    flex-direction: column
+    justify-content: space-evenly
+    align-items: center
