--- a/style.css
+++ b/style.css
@@ -13,15 +13,16 @@
 }
 
 video {
-  width: 100%;
-  height: 100%;
-  -o-object-fit: fill;
-     object-fit: fill;
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-width: 100%;
 }
 
 .ops {
   width: 80%;
-  height: auto;
+  height: 30rem;
   position: absolute;
   display: flex;
   justify-content: space-between;
@@ -38,7 +39,12 @@ video {
 
 .timer-container button {
   padding: 1rem 2rem;
-  background: tran;
+  background-color: transparent;
+  border: 2px solid white;
+  color: white;
+  border-radius: 0.6rem;
+  cursor: pointer;
+  box-shadow: 0 6px 6px rgba(0, 0, 0, 0.8);
 }
 
 .player-container .player {
