--- a/style.css
+++ b/style.css
@@ -41,10 +41,22 @@ video {
   padding: 1rem 2rem;
   background-color: transparent;
   border: 2px solid white;
+  font-weight: 600;
+  font-size: 0.9rem;
   color: white;
   border-radius: 0.6rem;
   cursor: pointer;
   box-shadow: 0 6px 6px rgba(0, 0, 0, 0.8);
+  transition: 0.25s;
+}
+
+.timer-container button:hover {
+  transform: translateY(-0.5rem);
+}
+
+.timer-container button:active {
+  transform: translateY(0.25rem);
+  box-shadow: rgb(85, 91, 255) 0px 0px 0px 3px, rgb(31, 193, 27) 0px 0px 0px 6px, rgb(255, 217, 19) 0px 0px 0px 9px, rgb(255, 156, 85) 0px 0px 0px 12px, rgb(255, 85, 85) 0px 0px 0px 15px;
 }
 
 .player-container .player {
@@ -53,6 +65,33 @@ video {
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
+}
+
+.player .play {
+  padding: 2rem;
+  background-color: transparent;
+  border: 5px solid white;
+  border-radius: 50%;
+  transition: 0.5s;
+}
+
+.player .play:hover {
+  padding: 9rem;
+  background-color: transparent;
+  border: 10px solid white;
+  border-radius: 50%;
+}
+
+.player .play:active {
+  padding: 9rem;
+  background-color: transparent;
+  border: 10px solid white;
+  border-radius: 50%;
+  transform: translateY(2rem);
+  stroke: red;
+  stroke-width: 1;
+  stroke-linecap: butt;
+  stroke-dasharray: 0;
 }
 
 .mood-container .moods {
