--- a/style.css
+++ b/style.css
@@ -16,8 +16,9 @@ video {
   position: fixed;
   right: 0;
   bottom: 0;
-  min-width: 100%;
-  min-width: 100%;
+  width: 100%;
+  height: 100vh;
+  object-fit: cover;
 }
 
 .ops {
